--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -12,19 +12,19 @@
 
                 <div class="item">
                     <span class="icon icon-2"></span>
-                    <input type="text" name="username" lay-verify="required"  placeholder="请输入登录账号" maxlength="24"/>
+                    <input type="text" name="username" lay-verify="required" placeholder="请输入登录账号" maxlength="24" />
                 </div>
 
                 <div class="item">
                     <span class="icon icon-3"></span>
-                    <input type="password" name="password" lay-verify="required"  placeholder="请输入密码" maxlength="20">
+                    <input type="password" name="password" lay-verify="required" placeholder="请输入密码" maxlength="20">
                     <span class="bind-password icon icon-4"></span>
                 </div>
 
                 {if $captcha == 1}
                 <div id="validatePanel" class="item" style="width: 137px;">
                     <input type="text" name="captcha" placeholder="请输入验证码" maxlength="4">
-                    <img id="refreshCaptcha" class="validateImg"  src="{:url('login/captcha')}" onclick="this.src='{:url(\'login/captcha\')}?seed='+Math.random()">
+                    <img id="refreshCaptcha" class="validateImg" src="{:url('login/captcha')}" onclick="this.src='{:url(\'login/captcha\')}?seed='+Math.random()">
                 </div>
                 {/if}
 
@@ -36,6 +36,11 @@
             </div>
             <div class="layui-form-item" style="text-align:center; width:100%;height:100%;margin:0px;">
                 <button class="login-btn" lay-submit>立即登录</button>
+            </div>
+            <div class="layui-form-item" style="padding: 10px;">
+                <div class="layui-btn-container">
+                    {:event_view_content("AdminLoginType")}
+                </div>
             </div>
         </form>
     </div>
