--- a/public/static/admin/css/login.css
+++ b/public/static/admin/css/login.css
@@ -1,8 +1,7 @@
-
 .demo {
     padding-top: 20px;
     text-align: center;
-    color: #9abcda!important;
+    color: #9abcda !important;
     font-size: 14px;
 }
 
@@ -150,7 +149,7 @@
     width: 428px;
     background: #fff;
     border-radius: 0 0 12px 12px;
-    padding-bottom: 53px;
+
 }
 
 .login-main .login-bottom .center {
@@ -180,19 +179,23 @@ input::-webkit-input-placeholder {
     color: #a6aebf;
 }
 
-input::-moz-placeholder { /* Mozilla Firefox 19+ */
+input::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
     color: #a6aebf;
 }
 
-input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+input:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
     color: #a6aebf;
 }
 
-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+input:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
     color: #a6aebf;
 }
 
-input:-webkit-autofill { /* 取消Chrome记住密码的背景颜色 */
+input:-webkit-autofill {
+    /* 取消Chrome记住密码的背景颜色 */
     -webkit-box-shadow: 0 0 0 1000px white inset !important;
 }
 
@@ -268,7 +271,8 @@ html {
     padding: 5px !important;
 }
 
-.footer a, .footer span {
+.footer a,
+.footer span {
     color: #fff;
 }
 
